# andromeda

./: .gitignore  .gitmodules  Andromeda.asta  CMakeInstall.txt  CMakeLists.txt  CMakeLists.txt.user.2.2pre5  Doxyfile  Install.cmake  LibSuffix.cmake  Linguist.cmake  ProjectInfo.cmake  README.txt  TODO.txt  andromeda.desktop  andromeda.qbs  bugs.txt  features.txt  lupdate.sh
src/app/: Andromeda.icns  CMakeLists.txt  andromeda.desktop  andromeda.icns  andromeda.qrc  app.qbs  application.cpp  application.h  browsertabwidget.cpp  browsertabwidget.h  browserwindow.cpp  browserwindow.h  browserwindow_p.h  commandssettingspage.cpp  commandssettingspage.h  generalsettingspage.cpp  generalsettingspage.h  generalsettingswidget.cpp  generalsettingswidget.ui  main.cpp  myaddressbar.cpp  namespace.dox  openstrategies.cpp  openstrategies.h  settingsmodel.cpp  settingsmodel.h  settingswidget.cpp  settingswidget.h
src/app/translations/: andromeda_cs.ts  translations.qbs
src/apps/andromeda/: CMakeLists.txt  addressbar.cpp  addressbar.h  andromeda.rc  application.cpp  application.h  browsertabwidget.cpp  browsertabwidget.h  browserwindow.cpp  browserwindow.h  browserwindow_p.h  commandssettingspage.cpp  commandssettingspage.h  generalsettingspage.cpp  generalsettingspage.h  generalsettingswidget.h  generalsettingswidget.ui  main.cpp  myaddressbar.cpp  myaddressbar.h  namespace.dox  settingsmodel.cpp  settingsmodel_p.h  settingswidget.cpp  settingswidget.h  tabbar.h  tabbarbutton.cpp  tabbarbutton.h  tabcontainer.cpp  tabcontainer.h  tabwidget.cpp  tabwidget.h
src/apps/imageviewer/: CMakeLists.txt  application.cpp  application.h  imageviewer.desktop  imageviewer.rc  main.cpp  mainwindow.cpp  mainwindow.h  preferenceswindow.cpp  preferenceswindow.h  resources.qrc
src/apps/qimageviewer/: CMakeLists.txt  application.cpp  main.cpp  mainwindow.cpp  mainwindow.h  preferenceswindow.cpp  qimageviewer.desktop  qimageviewer.rc  resources.qrc
src/libs/: CMakeLists.txt
src/libs/bookmarks/: CMakeLists.txt  bookmark.cpp  bookmark.h  bookmarkdialog.cpp  bookmarksmenu.cpp  bookmarksmenu.h  bookmarksmodel.cpp  bookmarksmodel_p.h  bookmarkstoolbar.cpp  bookmarkstoolbar.h  bookmarkswidget.cpp  bookmarkswidget.h
src/libs/extensionsystem/: CMakeLists.txt  ExtensionSystem  empty.h  errorsdialog.cpp  errorsdialog.h  extensionsystem_global.h  fullpluginview.cpp  fullpluginview.h  fullpluginview.ui  iplugin.cpp  iplugin.h  iplugin_p.h  mutablepluginspec.cpp  mutablepluginspec.h  namespace.dox  options.cpp  options.h  plugineditor.cpp  plugineditor.h  plugineditor.ui  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h  pluginspec.cpp  pluginspec.h  pluginspec_p.h  pluginspecformathandler.cpp  pluginspecformathandler_p.h  pluginview.cpp  pluginview.h  pluginview.ui  pluginviewmodel.cpp  pluginviewmodel.h  pluginviewmodel_p.h  qobjectpool.cpp  qobjectpool.h  qobjectpool_p.h
src/libs/filemanager/: CMakeLists.txt  dualpanewidget.cpp  dualpanewidget.h  dualpanewidget_p.h  filecopydialog.cpp  filecopydialog.h  filecopydialog_p.h  filecopyerrordialog.h  filecopyerrordialog.ui  filecopyreplacedialog.cpp  filecopyreplacedialog.h  filecopytask.cpp  filecopytask.h  filecopywidget.ui  fileexplorerwidget.cpp  fileexplorerwidget.h  fileinfodialog.cpp  fileinfodialog.h  fileitemdelegate.cpp  fileitemdelegate.h  fileitemdelegate_p.h  filemanager.qrc  filemanager_global.h  filemanagerconstants.h  filemanagerhistory.h  filemanagerhistoryitem.cpp  filemanagerhistoryitem.h  filemanagerhistoryitem_p.h  filemanagersettings.cpp  filemanagersettings.h  filemanagersettings_p.h  filemanagerwidget.cpp  filemanagerwidget.h  filemanagerwidget_p.h  filesystemmanager.h  filesystemmodel.cpp  filesystemmodel.h  navigationmodel.cpp  navigationmodel.h  navigationmodel_p.h  (+7 more)
src/libs/guisystem/: CMakeLists.txt  GuiSystem  abstractcommand.cpp  abstractcommand.h  abstractcommand_p.h  abstractcontainer.cpp  abstractcontainer.h  abstractdocument.cpp  abstractdocument.h  abstractdocument_p.h  abstracteditor.cpp  abstracteditor.h  abstracteditorfactory.cpp  abstracteditorfactory.h  abstracthistory.cpp  abstracthistory.h  abstractview.cpp  abstractview.h  abstractviewfactory.cpp  abstractviewfactory.h  action.cpp  action.h  actionmanager.cpp  actionmanager.h  actionmanager_p.h  centralwidget.cpp  centralwidget.h  command.cpp  command.h  commandcontainer.cpp  commandcontainer.h  commandsmodel.cpp  commandsmodel.h  commandsmodel_p.h  commandssettingswidget.cpp  commandssettingswidget.h  commandssettingswidget.ui  constants.h  editormanager.cpp  editormanager.h  (+90 more)
src/libs/imageviewer/: CMakeLists.txt  imageview.cpp  imageview.h  imageview_p.h  imageviewer_global.h  imageviewsettings.cpp  imageviewsettings.h  imageviewsettings_p.h  preferenceswidget.cpp  preferenceswidget.h  preferenceswidget.ui  resizedialog.cpp  resizedialog.h  resizedialog.ui
src/libs/io/: CMakeLists.txt  IO  QDriveController  QDriveInfo  QFileCopier  directory_details.cpp  directory_details.h  directorydetails.cpp  directorydetails.h  filecopymanager.cpp  filecopymanager.h  filecopymanager_p.h  fileimageprovider.cpp  fileimageprovider.h  filesystemmodel.cpp  filesystemmodel.h  info2.cpp  info2_p.h  io_global.h  kdesettings.cpp  kdesettings.h  main.cpp  qdefaultprogram.cpp  qdefaultprogram.h  qdefaultprogram_linux.cpp  qdefaultprogram_mac.mm  qdefaultprogram_p.h  qdefaultprogram_win.cpp  qdefaultprograms.cpp  qdefaultprograms.h  qdefaultprograms_linux.cpp  qdefaultprograms_mac.mm  qdefaultprograms_win.cpp  qdrivecontroller.cpp  qdrivecontroller.h  qdrivecontroller_linux.cpp  qdrivecontroller_linux_p.h  qdrivecontroller_mac.cpp  qdrivecontroller_mac_p.h  qdrivecontroller_p.h  (+36 more)
src/libs/qimageview/: CMakeLists.txt  qimageview.cpp  qimageview.h  qimageview_global.h  qimageview_p.h  qimageviewpreferenceswidget.cpp  qimageviewpreferenceswidget.h  qimageviewpreferenceswidget.ui  qimageviewresizedialog.cpp  qimageviewresizedialog.h  (+4 more)
src/plugins/: CMakeLists.txt
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/manual/: CMakeLists.txt
tests/plugins/: CMakeLists.txt
(+999 files in other folders)
